automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -19,9 +19,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Give me your name: Feel Better Bro\n",
+      "Your name is Feel Better Bro\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"Give me your name: \")\n",
     "print(\"Your name is \" + name)"
