automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -110,9 +110,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your name: Andrew\n",
+      "How old are you: 24\n",
+      "Andrew will be 100 years old in the year 2094\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"What is your name: \")\n",
     "age = int(input(\"How old are you: \"))\n",
